Changelog for HTML-Tree
4.2 UNRELEASED
    [FIXES]
    * Tied all $VERSION to HTML::Element to ensure latest package is used
      for all modules. RT #66110
    * Moved perlcritic tests to xt/author
    [DOCUMENTATION]
    * Added text and link to "Perl and LWP" book.
    
4.1 Mon Oct 25 2010
    [FIXES]
    * '/' is a valid attribute (pull from tokuhirom) (RT #61809)
    * Change check fo subclasses in as_HTML. (RT #61673)
    * Fix ProhibitThreeArgumentOpen being triggered. (RT #61857)

4.0    Mon Sep 20 2010
    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * Changes to entity encoding from ord values to XML entities may break
      tests expecting &#00; style encoding.
    * Attribute names are now validated in as_XML and invalid names will
      cause an error.


    [FIXES]
    * Optionally empty tags with content now have close tag. (RT #49932 #41806)
    * Added attribute name validation. (RT #23439) 
    * Added span to @TAGS in AsSubs. (RT #55848)
    * Changed tag encoding to human readable form, e.g. &gt;, and stopped
      re-encoding encoded tags (RT #55835)
    * Added no_expand_entities option to disable entity decoding when
      parsing source. (RT #24947)
    * Fix replace_with not setting parent for an array of content. 
      (RT #28204 #45495)
    * Removed newline being appended to as_HTML output. (RT #41739)
    * Fix invalid parent for subsclasses. (RT #36247)
    * Fixed #! line in tests (RT #41945)
    * Switched to Module::Build
    * Fixed Perl::Critic errors
    * Added lots of use strict and use warnings
    * Fix PERL_UNICODE breaking tests. (RT #28404)
    * Add check for class type to traverse. (RT #35948)
    * Move attribute name validation to as_XML. (RT #60619)
    * Fix critic test exploding if Test::Perl::Critic isn't installed.
    * Fix annoying message about x.yy_z not being numeric in t/building.t
    * Added extra_chars options to as_trimmed_text (RT #26436)
    * Added catch for broken table tags (RT #59980)