@@ -327,7 +327,15 @@ L<HTML::Element>
 Copyright 2000,2001 Sean M. Burke
 
 =head1 AUTHOR
+Current Author:
+	Jeff Fearn C<< <jfearn@cpan.org> >>.
 
-Sean M. Burke, E<lt>sburke@cpan.orgE<gt>
+Original HTML-Tree author:
+	Gisle Aas.
+
+Former Authors:
+	Sean M. Burke.
+	Andy Lester.
+	Pete Krawczyk C<< <petek@cpan.org> >>.
 
 =cut
